--- a/my-app/src/components/feature/EmailForm/EmailForm.css
+++ b/my-app/src/components/feature/EmailForm/EmailForm.css
@@ -5,13 +5,19 @@
     font-family: 'Poppins', sans-serif;
 }
 
+:root {
+    --main-bg-color: #F0E9DC; /* Alabaster */
+    --sec-bg-color: #07678E; /* Blue Sapphire */
+    --main-btn-color: #2DBCB4; /* Tiffany Blue */
+    --neutral-color: #12130F; /* Smoky Black */
+    --misc-color: #BF4E30; /* Vermillion */
+}
+
 #form-wrapper {
     position: absolute;
     top: 50%;
     left: 70%;
     margin-top: 10vh;
-    /* margin-top: 30rem;
-    margin-left: 50rem; */
     transform: translate(-50%, -50%);
     width: /* 280px */ 450px;
     height: 520px;
@@ -20,20 +26,22 @@
     flex-direction: column;
     backdrop-filter: blur(10px);
     /* border: .7px solid rgba(255,255,255,.2); */
-    border: .7px solid red;
+    /* border: .7px solid red; */
     align-items: center;
     justify-content:space-evenly;
     color: #2c426a;
     grid-area: email;
+    text-transform: uppercase;
     /* background-image: url("http://clubsolaris.com/imgs/tips-to-take-care-of-the-beach-during-your-vacations/beach-sea-cancun-sun.png") */
 }
 
 .intro-text {
     width: 260px;
     height: 60px;
-    margin: .2rem;
+    /* margin: .2rem; */
     font-size: 1.2rem;
-    color: #2c426a;
+    /* color: #2c426a; */
+    /* color: #BF4E30; */
 }
 
 .email-form {
@@ -48,23 +56,30 @@
     }
 
     .name-input input{
-        width: 130px;
+        width: 100%;
         height: 50px;
         outline: none;
         border: .5px solid #dbdbdb;
         padding: .9rem;
+        /* margin-right: .5rem; */
     }
 
     .input-one input {
         border-radius: 3px 0 0 3px;
+        box-shadow: 0 0 10px #494f653b;
     }
 
     .input-two input {
         border-radius: 0 3px 3px 0;
+        box-shadow: 0 0 10px #494f653b;
     }
 
     input::placeholder{
         color: #bfbfbf;
+    }
+
+    .name-txt-box {
+        margin-top: .5rem;
     }
 
 /* THIS IS FOR THE EMAIL INPUTS */
@@ -79,7 +94,13 @@
        border: .5px solid #dbdbdb;
        border-radius: 3px;
        padding: .9rem;
+       box-shadow: 0 0 10px #494f653b;
     }
+
+    /* ._subject.form-input-box {
+        box-shadow: 0 0 10px #494f653b;
+        background: red;
+    } */
 
     .btn-box {
         height: 100px;
@@ -98,7 +119,7 @@
         border-radius: 2px;
         border: none;
         outline: none;
-        background: #2c426a;
+        background: var(--main-btn-color);
         color: white;
         cursor: pointer;
     }
@@ -112,6 +133,7 @@
         outline: none;
         background: white;
         color: black;
+        box-shadow: 0 0 10px #494f653b;
     }
 
     .message-text::placeholder{
@@ -121,21 +143,21 @@
 
 /* THIS IS FOR THE ICON BOXES/PICS */
     .other-content{
-        width: 260px;
-        height: 90px;
+        /* width: 260px;
+        height: 90px; */
     }
 
     .other-content p {
         text-align: center;
         padding: .2rem;
-        font-size: .6rem;
+        font-size: 1rem;
     }
 
     .links {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding-top: .5rem;
+        padding-top: 2rem;
     }
 
     .links a{
@@ -146,12 +168,11 @@
         line-height: 50px;
         text-align: center;
         border-radius: 3px;
-        color: #FFF;
+        color: var(--main-bg-color);
     }
 
     .links a:nth-child(1):hover {
-        /* background: #26242e; */
-        color: #2c426a;
+        color: var(--main-btn-color);
         transition: color 500ms ease .1s;
         animation-name: scale;
         animation-duration: 1s;
@@ -176,7 +197,7 @@
     /* background: linear-gradient(to top,#00F0FF 30%, #f0e9dc 60%); */
     .links a:nth-child(2):hover {
         /* background: blue; */
-        color: #2c426a;
+        color: var(--main-btn-color);
         transition: color 500ms ease .1s;
         transition: color 500ms ease .1s;
         animation-name: scale;
@@ -186,8 +207,7 @@
     }
 
     .links a:nth-child(3):hover {
-        /* background: purple; */
-        color: #2c426a;
+        color: var(--main-btn-color);
         transition: color 500ms ease .1s;
         transition: color 500ms ease .1s;
         animation-name: scale;
@@ -197,8 +217,7 @@
     }
 
     .links a:nth-child(4):hover {
-        /* background: aqua; */
-        color: #2c426a;
+        color: var(--main-btn-color);
         transition: color 500ms ease .1s;
         transition: color 500ms ease .1s;
         animation-name: scale;
