fixed main positioning issues with skills container for mobile views

--- a/my-app/src/components/feature/SkillList/Skills.css
+++ b/my-app/src/components/feature/SkillList/Skills.css
@@ -12,6 +12,7 @@
 /* EVERYTHING PERTAINING TO THE SKILLS-CONTAINER */
     .skills-container {
         display: grid;
+        width: 100%;
         margin-top: 2rem;
         justify-content: center;
         grid-template-columns: auto;
