--- a/my-app/src/components/feature/SkillList/Skills.css
+++ b/my-app/src/components/feature/SkillList/Skills.css
@@ -25,16 +25,32 @@
         filter: drop-shadow(2px 4px 8px lightgrey);
     }
 
+    .skills-images {
+        /* align-items: center;
+        justify-content: center; */
+        /* border: solid yellow; */
+    }
+
     .skills-images li {
         list-style: none;
-        margin: 20px;
+        /* margin: 20px; */
+        /* margin: 1rem; */
+        padding: .5rem;
     }
 
     .skills-container ul {
-        padding: 0;
-        display: flex;
+        /* border: solid red; */
+        padding: 1rem;
+        /* display: flex; */
         flex-wrap: wrap;
-        justify-content: space-evenly;
+        /* justify-content: space-evenly; */
         max-width: 625px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        transform: translate(50%, 0%);
+        /* margin: 1em 0; */
+        max-width: 45%;
+        min-width: 250px;
     }
     
