--- a/my-app/src/components/layout/Contact/Contact.css
+++ b/my-app/src/components/layout/Contact/Contact.css
@@ -33,6 +33,8 @@
 
     .skills-title {
         margin-top: 2rem;
+        /* margin-left: 3rem; */
+        
     }
 
     .skills-images {
@@ -133,10 +135,6 @@
     }
 
     .email-form {
-        /* transform: translate(-4%, 0%); */
-        /* height: 290px; */
-       /*  border: .10px solid red; */
-        /* width: 80vw; */
         width: 90vw;
     }
 
