--- a/my-app/src/components/layout/AboutMe/AboutMe.css
+++ b/my-app/src/components/layout/AboutMe/AboutMe.css
@@ -312,6 +312,7 @@
             width: 100%;
             /* height:100%; */
             padding: 2.5rem 2.5rem 1.5rem 2.5rem;
+            margin-top: 4rem;
         }
 
         .container {
@@ -410,6 +411,7 @@
     @media only screen and (min-device-width: 375px)and (max-width: 768px) {
         #mainPage-wrapper {
             padding: 4.5rem 2.5rem 1.5rem 2.5rem;
+            margin-top: 3rem;
         }
 
         .container {
@@ -503,6 +505,7 @@
 
         #mainPage-wrapper {
             padding: 4.5rem 2.5rem 1.5rem 2.5rem;
+            margin-top: 5rem;
         }
 
         .container {
@@ -590,6 +593,7 @@
     @media only screen and (min-device-width: 1000px) and (max-device-width: 1366px) {
         #mainPage-wrapper {
             padding: 4.5rem 2.5rem 1.5rem 2.5rem;
+            margin-top: 5rem;
         }
 
         .container {
@@ -663,6 +667,7 @@
     @media only screen and (min-device-width: 1366px) and (max-device-width: 2500px) {
         #mainPage-wrapper {
             padding: 4.5rem 2.5rem 1.5rem 2.5rem;
+            margin-top: 6rem;
         }
         
     }
