--- a/my-app/src/components/layout/Landing/Landing.css
+++ b/my-app/src/components/layout/Landing/Landing.css
@@ -135,7 +135,7 @@
         flex-direction: column;
         flex-wrap: wrap;
         width: 100%;
-        margin-top: 10px;
+        margin-top: 5rem;
         /* border: .7px solid red; */
       }
 
@@ -177,7 +177,7 @@
           flex-direction: column;
           flex-wrap: wrap;
           width: 100%;
-          margin-top: 10px;
+          margin-top: 5rem;
           
       }
 
@@ -214,7 +214,7 @@
       grid-template-columns: 50% 50%;
       flex-wrap: wrap;
       width: 100%;
-      margin-top: 10px;
+      margin-top: 5rem;
     }
 
     .projCard-container .projCard-box {
@@ -281,7 +281,7 @@
       flex-wrap: wrap;
       width: 100%;
       /* grid-gap: 10px; */
-      margin-top: 2rem;
+      margin-top: 6rem;
     }
 
     .projCard-container .projCard-box {
@@ -329,6 +329,20 @@
       
     }
   }
+
+  @media only screen and (min-device-width: 1366px) and (max-device-width: 2500px) {
+    .projCard-container {
+         
+      display: grid;
+      grid-template-columns: 50% 50%;
+      flex-direction: row;
+      flex-wrap: wrap;
+      width: 100%;
+      /* grid-gap: 10px; */
+      margin-top: 6rem;
+    }
+    
+}
 
 
 /* For Landscape view */
