--- a/my-app/src/components/feature/EmailForm/EmailForm.css
+++ b/my-app/src/components/feature/EmailForm/EmailForm.css
@@ -15,12 +15,13 @@
 
 #form-wrapper {
     position: absolute;
-    top: 50%;
-    left: 70%;
-    margin-top: 10vh;
-    transform: translate(-50%, -50%);
+    z-index:1;
+    /* top: 50%; */
+    /* left: 70%; */
+    margin-top: 9rem;
+    /* transform: translate(-50%, -50%); */
     width: /* 280px */ 450px;
-    height: 520px;
+    height: 645px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -32,10 +33,13 @@
     color: #2c426a;
     grid-area: email;
     text-transform: uppercase;
-    /* background-image: url("http://clubsolaris.com/imgs/tips-to-take-care-of-the-beach-during-your-vacations/beach-sea-cancun-sun.png") */
+    /* background-image: url("http://clubsolaris.com/imgs/tips-to-take-care-of-the-beach-during-your-vacations/beach-sea-cancun-sun.png"); */
+    /* background-image: url("../../../../src/assets/images/Waves.mp4"); */
+    background-color: #fff;
 }
 
 .intro-text {
+
     width: 260px;
     height: 60px;
     /* margin: .2rem; */
@@ -45,18 +49,14 @@
 }
 
 .email-form {
+    z-index:50;
     width: 260px;
-    height: 390px;
+    /* height: 390px; */
 }
 
 
 /* THIS IS FOR THE NAME INPUTS */
-    /* .name-input {
-        display: flex;
-        
-    } */
-
-
+   
     .input-one input {
         border-radius: 3px 0 0 3px;
         box-shadow: 0 0 10px #494f653b;
@@ -130,13 +130,13 @@
     .btn-box button {
         font-size: 1rem;
         border-radius: 3em;
-        border: 1px solid #494F65;
-        color: #494F65;
+        border: 1px solid var(  --sec-bg-color);
+        color: var(--main-bg-color);
         outline: none;
         /* background: var(--main-btn-color); */
-        color: white;
+        color: #fff;
         cursor: pointer;
-        background: transparent;
+        /* background: transparent; */
         display: inline-block;
         border-radius: 3em;
         font-size: 1em;
