--- a/my-app/src/components/feature/EmailForm/EmailForm.css
+++ b/my-app/src/components/feature/EmailForm/EmailForm.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
 }
 
 :root {
@@ -18,7 +17,7 @@
     z-index:1;
     /* top: 50%; */
     /* left: 70%; */
-    margin-top: 9rem;
+    margin-top: 7rem;
     /* transform: translate(-50%, -50%); */
     width: /* 280px */ 450px;
     height: 645px;
@@ -157,15 +156,12 @@
 
     .message-text {
         width: 100%;
-        height: 45px;
-        font-size: 1rem;
-        border-radius: 2px;
-        border: none;
+        height: 50px;
         outline: none;
-        background: white;
-        color: black;
-        box-shadow: 0 0 10px #494f653b;
+        border: .5px solid #dbdbdb;
+        border-radius: 3px;
         padding: .9rem;
+        box-shadow: 0 0 10px #494f653b;
     }
 
     .message-text::placeholder{
