--- a/my-app/src/components/feature/SkillList/Skills.css
+++ b/my-app/src/components/feature/SkillList/Skills.css
@@ -7,16 +7,18 @@
     align-items: center;
     color: #1d1d1f;
     position: static;
+    /* background-color: #fff; */
 }
 
 /* EVERYTHING PERTAINING TO THE SKILLS-CONTAINER */
     .skills-container {
         display: grid;
         width: 100%;
-        margin-top: 2rem;
+        /* margin-top: 2rem; */
         justify-content: center;
         grid-template-columns: auto;
         grid-template-areas: ".skills-images" ".skill-list";
+        /* background-color: #fff; */
     }
 
     .skills-container li:hover {
