--- a/my-app/src/components/layout/Contact/Contact.css
+++ b/my-app/src/components/layout/Contact/Contact.css
@@ -2,13 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
 }
 
 #contact {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 10px;
+    
 }
 
 .skills {
@@ -185,7 +185,7 @@
 
     #form-wrapper {
         /* transform: translate(-4%, 00%); */
-        width: 100%;
+        /* width: 100%; */
         border-radius: 0;
         /* margin-top: 0; */
     }
