--- a/my-app/src/components/feature/EmailForm/EmailForm.css
+++ b/my-app/src/components/feature/EmailForm/EmailForm.css
@@ -41,15 +41,19 @@
 
     width: 260px;
     height: 60px;
+    font-family: 'Otomanopee One', sans-serif;
     /* margin: .2rem; */
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     /* color: #2c426a; */
     /* color: #BF4E30; */
+    text-align: center;
+    margin-bottom: 1rem;
 }
 
 .email-form {
     z-index:50;
     width: 260px;
+    font-family: 'Amatic SC', sans-serif;
     /* height: 390px; */
 }
 
