--- a/my-app/src/components/feature/SkillList/Skills.css
+++ b/my-app/src/components/feature/SkillList/Skills.css
@@ -7,6 +7,7 @@
     align-items: center;
     color: #1d1d1f;
     position: static;
+    font-family: 'Otomanopee One', sans-serif;
     /* background-color: #fff; */
 }
 
