need to size form

--- a/my-app/src/components/feature/EmailForm/EmailForm.css
+++ b/my-app/src/components/feature/EmailForm/EmailForm.css
@@ -69,24 +69,16 @@
         outline: none;
         border: .5px solid #dbdbdb;
         padding: .9rem;
+        font-family: 'Amatic SC', sans-serif;
+        font-size: 1rem;;
         /* margin-top: 1rem; */
         /* margin-right: 30px; */
     }
 
-    /* .input-two input {
-        border-radius: 0 3px 3px 0;
-        box-shadow: 0 0 10px #494f653b;
-        width: 100%;
-        min-width: auto;
-        height: 50px;
-        outline: none;
-        border: .5px solid #dbdbdb;
-        padding: .9rem;
-        margin-top: 1rem;
-    } */
-
     input::placeholder{
         color: #bfbfbf;
+        font-family: 'Amatic SC', sans-serif;
+        font-size: 1rem;
     }
 
     .txt-box {
@@ -107,6 +99,8 @@
        border-radius: 3px;
        padding: .9rem;
        box-shadow: 0 0 10px #494f653b;
+       font-family: 'Amatic SC', sans-serif;
+       font-size: 1rem;;
     }
 
     ._subject {
@@ -122,6 +116,8 @@
         border-radius: 3px;
         padding: .9rem;
         box-shadow: 0 0 10px #494f653b;
+        font-family: 'Amatic SC', sans-serif;
+        font-size: 1rem;;
     }
 
     .btn-box p {
@@ -142,6 +138,7 @@
         /* background: transparent; */
         display: inline-block;
         border-radius: 3em;
+        font-family: 'Otomanopee One', sans-serif;
         font-size: 1em;
         padding: 8px 45px;
         line-height: initial;
@@ -166,10 +163,13 @@
         border-radius: 3px;
         padding: .9rem;
         box-shadow: 0 0 10px #494f653b;
+        font-family: 'Amatic SC', sans-serif;
     }
 
     .message-text::placeholder{
         color: #bfbfbf;
+        font-family: 'Amatic SC', sans-serif;
+        font-size: 1rem;
     }
 
 /* THIS IS FOR THE ICON BOXES/PICS */
