--- a/my-app/src/components/layout/Landing/Landing.css
+++ b/my-app/src/components/layout/Landing/Landing.css
@@ -102,6 +102,7 @@
       font-size: 50px;
       /* margin-top: 10vh; */
       padding: 4rem;
+      font-family: 'Amatic SC', sans-serif;
       color: #fff;
       /* border: 10px solid red; */
       /* transform: translateY(50%); */
