--- a/my-app/src/components/layout/Contact/Contact.css
+++ b/my-app/src/components/layout/Contact/Contact.css
@@ -14,6 +14,8 @@
 .skills {
     margin-top: 13rem;
     width: 100%;
+    border: 10px solid purple;
+    height: 100%;
 }
 
 /* ------------------------------------------------------------------------------- */
@@ -185,21 +187,23 @@
 
     #form-wrapper {
         /* transform: translate(-4%, 00%); */
-        /* width: 100%; */
+        width: 100%;
         border-radius: 0;
         /* margin-top: 0; */
+        /* border: .10px solid red; */
     }
 
     .email {
-        /* width: 100%; */
+        width: 100%;
         display: flex;
         flex-direction: column;
+        /* border: .10px solid red; */
     }
 
     .email-form {
         /* transform: translate(-4%, 0%); */
         /* height: 290px; */
-       /*  border: .10px solid red; */
+        /* border: .10px solid red; */
         /* width: 80vw; */
         width: 90vw;
     }
@@ -218,53 +222,11 @@
 /* For Landscape view */
 
 /* @media (orientation: landscape) and (min-width: 480px) and (max-width: 768px) {
-.projCard-container {
-  
-display: flex;
-flex-direction: column;
-flex-wrap: wrap;
-width: 100%;
 
-}
-
-.projCard-container .projCard-box {
-width: 90vw;
-height: 300px;
-transform: translate(1%, 0%);
-}
-
-.projCard-container .projCard-box .img-wrapper img {
-
-
-width: 125vw;
-height: auto;
-
-}
 } */
 
 /* @media (orientation: landscape) and (min-width: 375px) and (max-width: 768px) {
-.projCard-container {
-  
-display: flex;
-flex-direction: column;
-flex-wrap: wrap;
-width: 100%;
 
-}
-
-.projCard-container .projCard-box {
-width: 90vw;
-height: 300px;
-transform: translate(1%, 0%);
-}
-
-.projCard-container .projCard-box .img-wrapper img {
-
-
-width: 125vw;
-height: auto;
-
-}
 } */
 
 /* @media (orientation: landscape) and (min-width: 1000px) and (max-height: 900px) {
